// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography in RTL renders Caption 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex flex-col gap-2 w-full"
        >
          <span
            class="text-moon-9-caption uppercase transition-colors"
          >
            Size 9
          </span>
          <span
            class="text-moon-10-caption uppercase transition-colors"
          >
            Size 10
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex flex-col gap-2 w-full"
      >
        <span
          class="text-moon-9-caption uppercase transition-colors"
        >
          Size 9
        </span>
        <span
          class="text-moon-10-caption uppercase transition-colors"
        >
          Size 10
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Typography in RTL renders Colors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <p
          class="text-trunks"
        >
          Trunks
        </p>
        <p
          class="text-piccolo"
        >
          Piccolo
        </p>
        <p
          class="text-roshi"
        >
          Roshi
        </p>
        <p
          class="text-chichi"
        >
          Chichi
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <p
        class="text-trunks"
      >
        Trunks
      </p>
      <p
        class="text-piccolo"
      >
        Piccolo
      </p>
      <p
        class="text-roshi"
      >
        Roshi
      </p>
      <p
        class="text-chichi"
      >
        Chichi
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Typography in RTL renders Heading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex flex-col gap-2 w-full"
        >
          <h3
            class="text-moon-9 font-medium transition-colors"
          >
            Size 9
          </h3>
          <h3
            class="text-moon-10 font-medium transition-colors"
          >
            Size 10
          </h3>
          <h3
            class="text-moon-12 font-medium transition-colors"
          >
            Size 12
          </h3>
          <h3
            class="text-moon-14 font-medium transition-colors"
          >
            Size 14
          </h3>
          <h3
            class="text-moon-16 font-medium transition-colors"
          >
            Size 16
          </h3>
          <h3
            class="text-moon-18 font-medium transition-colors"
          >
            Size 18
          </h3>
          <h3
            class="text-moon-20 font-medium transition-colors"
          >
            Size 20
          </h3>
          <h3
            class="text-moon-24 font-medium transition-colors"
          >
            Size 24
          </h3>
          <h3
            class="text-moon-32 font-medium transition-colors"
          >
            Size 32
          </h3>
          <h3
            class="text-moon-48 font-medium transition-colors"
          >
            Size 48
          </h3>
          <h3
            class="text-moon-56 font-medium transition-colors"
          >
            Size 56
          </h3>
          <h3
            class="text-moon-64 font-medium transition-colors"
          >
            Size 64
          </h3>
          <h3
            class="text-moon-72 font-medium transition-colors"
          >
            Size 72
          </h3>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex flex-col gap-2 w-full"
      >
        <h3
          class="text-moon-9 font-medium transition-colors"
        >
          Size 9
        </h3>
        <h3
          class="text-moon-10 font-medium transition-colors"
        >
          Size 10
        </h3>
        <h3
          class="text-moon-12 font-medium transition-colors"
        >
          Size 12
        </h3>
        <h3
          class="text-moon-14 font-medium transition-colors"
        >
          Size 14
        </h3>
        <h3
          class="text-moon-16 font-medium transition-colors"
        >
          Size 16
        </h3>
        <h3
          class="text-moon-18 font-medium transition-colors"
        >
          Size 18
        </h3>
        <h3
          class="text-moon-20 font-medium transition-colors"
        >
          Size 20
        </h3>
        <h3
          class="text-moon-24 font-medium transition-colors"
        >
          Size 24
        </h3>
        <h3
          class="text-moon-32 font-medium transition-colors"
        >
          Size 32
        </h3>
        <h3
          class="text-moon-48 font-medium transition-colors"
        >
          Size 48
        </h3>
        <h3
          class="text-moon-56 font-medium transition-colors"
        >
          Size 56
        </h3>
        <h3
          class="text-moon-64 font-medium transition-colors"
        >
          Size 64
        </h3>
        <h3
          class="text-moon-72 font-medium transition-colors"
        >
          Size 72
        </h3>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Typography in RTL renders Text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex flex-col gap-2 w-full"
        >
          <p
            class="text-moon-9 transition-colors"
          >
            Size 9
          </p>
          <p
            class="text-moon-10 transition-colors"
          >
            Size 10
          </p>
          <p
            class="text-moon-12 transition-colors"
          >
            Size 12
          </p>
          <p
            class="text-moon-14 transition-colors"
          >
            Size 14
          </p>
          <p
            class="text-moon-16 transition-colors"
          >
            Size 16
          </p>
          <p
            class="text-moon-18 transition-colors"
          >
            Size 18
          </p>
          <p
            class="text-moon-20 transition-colors"
          >
            Size 20
          </p>
          <p
            class="text-moon-24 transition-colors"
          >
            Size 24
          </p>
          <p
            class="text-moon-32 transition-colors"
          >
            Size 32
          </p>
          <p
            class="text-moon-48 transition-colors"
          >
            Size 48
          </p>
          <p
            class="text-moon-56 transition-colors"
          >
            Size 56
          </p>
          <p
            class="text-moon-64 transition-colors"
          >
            Size 64
          </p>
          <p
            class="text-moon-72 transition-colors"
          >
            Size 72
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex flex-col gap-2 w-full"
      >
        <p
          class="text-moon-9 transition-colors"
        >
          Size 9
        </p>
        <p
          class="text-moon-10 transition-colors"
        >
          Size 10
        </p>
        <p
          class="text-moon-12 transition-colors"
        >
          Size 12
        </p>
        <p
          class="text-moon-14 transition-colors"
        >
          Size 14
        </p>
        <p
          class="text-moon-16 transition-colors"
        >
          Size 16
        </p>
        <p
          class="text-moon-18 transition-colors"
        >
          Size 18
        </p>
        <p
          class="text-moon-20 transition-colors"
        >
          Size 20
        </p>
        <p
          class="text-moon-24 transition-colors"
        >
          Size 24
        </p>
        <p
          class="text-moon-32 transition-colors"
        >
          Size 32
        </p>
        <p
          class="text-moon-48 transition-colors"
        >
          Size 48
        </p>
        <p
          class="text-moon-56 transition-colors"
        >
          Size 56
        </p>
        <p
          class="text-moon-64 transition-colors"
        >
          Size 64
        </p>
        <p
          class="text-moon-72 transition-colors"
        >
          Size 72
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Typography renders Caption 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-2 w-full"
      >
        <span
          class="text-moon-9-caption uppercase transition-colors"
        >
          Size 9
        </span>
        <span
          class="text-moon-10-caption uppercase transition-colors"
        >
          Size 10
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-2 w-full"
    >
      <span
        class="text-moon-9-caption uppercase transition-colors"
      >
        Size 9
      </span>
      <span
        class="text-moon-10-caption uppercase transition-colors"
      >
        Size 10
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Typography renders Colors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p
        class="text-trunks"
      >
        Trunks
      </p>
      <p
        class="text-piccolo"
      >
        Piccolo
      </p>
      <p
        class="text-roshi"
      >
        Roshi
      </p>
      <p
        class="text-chichi"
      >
        Chichi
      </p>
    </div>
  </body>,
  "container": <div>
    <p
      class="text-trunks"
    >
      Trunks
    </p>
    <p
      class="text-piccolo"
    >
      Piccolo
    </p>
    <p
      class="text-roshi"
    >
      Roshi
    </p>
    <p
      class="text-chichi"
    >
      Chichi
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Typography renders Heading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-2 w-full"
      >
        <h3
          class="text-moon-9 font-medium transition-colors"
        >
          Size 9
        </h3>
        <h3
          class="text-moon-10 font-medium transition-colors"
        >
          Size 10
        </h3>
        <h3
          class="text-moon-12 font-medium transition-colors"
        >
          Size 12
        </h3>
        <h3
          class="text-moon-14 font-medium transition-colors"
        >
          Size 14
        </h3>
        <h3
          class="text-moon-16 font-medium transition-colors"
        >
          Size 16
        </h3>
        <h3
          class="text-moon-18 font-medium transition-colors"
        >
          Size 18
        </h3>
        <h3
          class="text-moon-20 font-medium transition-colors"
        >
          Size 20
        </h3>
        <h3
          class="text-moon-24 font-medium transition-colors"
        >
          Size 24
        </h3>
        <h3
          class="text-moon-32 font-medium transition-colors"
        >
          Size 32
        </h3>
        <h3
          class="text-moon-48 font-medium transition-colors"
        >
          Size 48
        </h3>
        <h3
          class="text-moon-56 font-medium transition-colors"
        >
          Size 56
        </h3>
        <h3
          class="text-moon-64 font-medium transition-colors"
        >
          Size 64
        </h3>
        <h3
          class="text-moon-72 font-medium transition-colors"
        >
          Size 72
        </h3>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-2 w-full"
    >
      <h3
        class="text-moon-9 font-medium transition-colors"
      >
        Size 9
      </h3>
      <h3
        class="text-moon-10 font-medium transition-colors"
      >
        Size 10
      </h3>
      <h3
        class="text-moon-12 font-medium transition-colors"
      >
        Size 12
      </h3>
      <h3
        class="text-moon-14 font-medium transition-colors"
      >
        Size 14
      </h3>
      <h3
        class="text-moon-16 font-medium transition-colors"
      >
        Size 16
      </h3>
      <h3
        class="text-moon-18 font-medium transition-colors"
      >
        Size 18
      </h3>
      <h3
        class="text-moon-20 font-medium transition-colors"
      >
        Size 20
      </h3>
      <h3
        class="text-moon-24 font-medium transition-colors"
      >
        Size 24
      </h3>
      <h3
        class="text-moon-32 font-medium transition-colors"
      >
        Size 32
      </h3>
      <h3
        class="text-moon-48 font-medium transition-colors"
      >
        Size 48
      </h3>
      <h3
        class="text-moon-56 font-medium transition-colors"
      >
        Size 56
      </h3>
      <h3
        class="text-moon-64 font-medium transition-colors"
      >
        Size 64
      </h3>
      <h3
        class="text-moon-72 font-medium transition-colors"
      >
        Size 72
      </h3>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Typography renders Text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-2 w-full"
      >
        <p
          class="text-moon-9 transition-colors"
        >
          Size 9
        </p>
        <p
          class="text-moon-10 transition-colors"
        >
          Size 10
        </p>
        <p
          class="text-moon-12 transition-colors"
        >
          Size 12
        </p>
        <p
          class="text-moon-14 transition-colors"
        >
          Size 14
        </p>
        <p
          class="text-moon-16 transition-colors"
        >
          Size 16
        </p>
        <p
          class="text-moon-18 transition-colors"
        >
          Size 18
        </p>
        <p
          class="text-moon-20 transition-colors"
        >
          Size 20
        </p>
        <p
          class="text-moon-24 transition-colors"
        >
          Size 24
        </p>
        <p
          class="text-moon-32 transition-colors"
        >
          Size 32
        </p>
        <p
          class="text-moon-48 transition-colors"
        >
          Size 48
        </p>
        <p
          class="text-moon-56 transition-colors"
        >
          Size 56
        </p>
        <p
          class="text-moon-64 transition-colors"
        >
          Size 64
        </p>
        <p
          class="text-moon-72 transition-colors"
        >
          Size 72
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-2 w-full"
    >
      <p
        class="text-moon-9 transition-colors"
      >
        Size 9
      </p>
      <p
        class="text-moon-10 transition-colors"
      >
        Size 10
      </p>
      <p
        class="text-moon-12 transition-colors"
      >
        Size 12
      </p>
      <p
        class="text-moon-14 transition-colors"
      >
        Size 14
      </p>
      <p
        class="text-moon-16 transition-colors"
      >
        Size 16
      </p>
      <p
        class="text-moon-18 transition-colors"
      >
        Size 18
      </p>
      <p
        class="text-moon-20 transition-colors"
      >
        Size 20
      </p>
      <p
        class="text-moon-24 transition-colors"
      >
        Size 24
      </p>
      <p
        class="text-moon-32 transition-colors"
      >
        Size 32
      </p>
      <p
        class="text-moon-48 transition-colors"
      >
        Size 48
      </p>
      <p
        class="text-moon-56 transition-colors"
      >
        Size 56
      </p>
      <p
        class="text-moon-64 transition-colors"
      >
        Size 64
      </p>
      <p
        class="text-moon-72 transition-colors"
      >
        Size 72
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
